--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "speedtypinggame",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -12,6 +15,8 @@
     "@types/react-dom": "^18.0.4",
     "bootstrap": "^5.1.3",
     "html-react-parser": "^1.4.12",
+    "mobx": "^6.6.1",
+    "mobx-react": "^7.5.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
